# django_calculator_for_building_materials

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
builder_parser/: .env.example  list_of_links.json  manage.py
builder_parser/builder_parser/: asgi.py  settings.py  urls.py  wsgi.py
builder_parser/parser_and_calculator/: admin.py  apps.py  constants.py  forms.py  models.py  parser.py  signals.py  views.py
builder_parser/parser_and_calculator/management/commands/: load_from_json.py
builder_parser/parser_and_calculator/migrations/: 0001_initial.py  0002_alter_product_url.py  0003_product_add_margin_product_final_price.py  0004_alter_product_add_margin_alter_product_final_price_and_more.py  0005_alter_product_final_price_alter_product_price.py
builder_parser/parser_and_calculator/services/: sign_variants.py  validators.py
builder_parser/parser_and_calculator/templatetags/: dict_extras.py
builder_parser/static/css/: base.css
builder_parser/templates/: dashboard.html  login.html  quote_detail.html  quote_pdf.html
builder_parser/templates/admin/: index.html
builder_parser/templates/admin/parser_and_calculator/product/: change_list.html
