[project]
name = "django-calculator"
version = "0.1.0"
description = "Django project for parsing product prices and generating quotes"
authors = [
  { name = "Vitaliy Morozov", email = "vitaly.morozov97@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4"

dependencies = [
  "django>=5.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.3",
  "openpyxl>=3.1.2",
  "reportlab>=4.1.0",
  "lxml>=5.1.0",
  "python-dotenv (>=1.1.0,<2.0.0)",
  "gunicorn (>=23.0.0,<24.0.0)",
  "django-redis (>=5.4.0,<6.0.0)",
  "django-grappelli (>=4.0.1,<5.0.0)",
  "django-multiselectfield (>=0.1.13,<0.2.0)",
]

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "isort>=5.13.2",
  "ipython>=8.22.0",
  "django-debug-toolbar>=4.3.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
bandit = "^1.8.3"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
factory-boy = "^3.3.3"
fakeredis = "^2.28.1"
responses = "^0.25.7"
coverage = "^7.8.0"
pytest-cov = "^6.1.1"

